# experiments-open-lto-manager

./: Cargo.toml  dev.env.check.sh
assets/: main.css
src/: asset.rs  main.rs  route.rs
src/backend/: mod.rs
src/backend/api/: api_manufacturer.rs  api_tape_type.rs  echo.rs  mod.rs  service.rs
src/backend/database/: db.rs  mod.rs  table_manufacturer.rs  table_tape_type.rs
src/backend/database/models/: mod.rs  model_manufacturer.rs  model_tape.rs  model_tape_type.rs
src/backend/database/tables/: table.rs  table_manufacturer.rs  table_tape.rs  table_tape_type.rs
src/backend/service/: worker.rs
src/frontend/components/: mod.rs  navbar.rs
src/frontend/pages/: home.rs  mod.rs  show.rs  test.rs
